src/test/deca/context/valid/methods/method_call_chain_2.deca
// Description :
//    Chaîne d'appels de méthodes sur deux niveaux.
//
// Resultats :
//    OK

class B {
    int g() {
        return 3;
    }
}

class A {
    B getB() {
        return new B();
    }
}

{
    A a = new A();
//    println(a.getB().g());
}

