src/test/deca/context/invalid/inheritance/protected_field_rule_bypass_attempt.deca
// Description :
//    Tentative de contournement des règles de visibilité protected.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
protected int x;
}

class B extends A {
    int get(A a) {
        return a.x;
    }
}

{
}

